<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.pedrazzani.android.basketcounter.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_um"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" />

            <!-- Placar -->
            <TextView
                android:id="@+id/score_teamA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:text="0"
                android:textSize="48sp"
                android:gravity="center" />

            <Button
                android:id="@+id/teamA_3pontos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_teamA"
                android:layout_centerHorizontal="true"
                android:onClick="button3PontosOnClickTeamA"
                android:text="@string/tres_pontos_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:id="@+id/teamA_2pontos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/teamA_3pontos_button"
                android:onClick="button2PontosOnClickTeamA"
                android:text="@string/dois_pontos_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamA_2pontos_button"
                android:layout_centerHorizontal="true"
                android:onClick="button1PontosOnClickTeamA"
                android:text="@string/um_ponto_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_dois"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp" />

            <!-- Placar -->
            <TextView
                android:id="@+id/score_teamB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/_0"
                android:textSize="48sp"
                android:gravity="center" />

            <Button
                android:id="@+id/teamB_3pontos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/score_teamB"
                android:layout_centerHorizontal="true"
                android:onClick="button3PontosOnClickTeamB"
                android:text="@string/tres_pontos_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />


            <Button
                android:id="@+id/teamB_2pontos_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamB_3pontos_button"
                android:layout_centerHorizontal="true"
                android:onClick="button2PontosOnClickTeamB"
                android:text="@string/dois_pontos_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="8dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamB_2pontos_button"
                android:layout_centerHorizontal="true"
                android:onClick="button1PontosOnClickTeamB"
                android:text="@string/um_ponto_button"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="32dp"
        android:onClick="buttonReset"
        android:text="@string/reset_label_button" />

</RelativeLayout>

